Make navbar a partial page
Remove bower libraries and create sharedtypes library

--- a/src/SolThoth.PublicProfile.Website/Views/Home/Index.cshtml
+++ b/src/SolThoth.PublicProfile.Website/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿<!-- content -->
-<div id="page-content-wrapper" class="header">
+﻿<div id="page-content-wrapper" class="header">
     <div class="container-fluid">
         <!-- header -->
         <div id="top" data-toggle="top"></div>
@@ -426,4 +425,3 @@
 
     </div>
 </div><!-- / page-content-wrapper -->
-<!-- / content -->
