--- a/src/SolThoth.PublicProfile.Website/Views/Shared/_Layout.cshtml
+++ b/src/SolThoth.PublicProfile.Website/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,6 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="~/vendors/Phorto-1.2/css/bootstrap.min.css" />
     <!-- Vendor CSS -->
-    <link rel="stylesheet" href="~/vendors/Phorto-1.2/css/animate.css" />
     <link href="~/vendors/Phorto-1.2/css/style.css" rel="stylesheet" />
     <link href="~/vendors/Phorto-1.2/css/owl.carousel.css" rel="stylesheet" />
     <link href="~/vendors/Phorto-1.2/css/owl.theme.css" rel="stylesheet" />
@@ -38,49 +37,14 @@
     </environment>
 </head>
 <body>
-    <div class="wrapper">
+    <div id="wrapper">
         <!-- side navigation -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#"><img src="~/vendors/Phorto-1.2/images/logo.png" alt=""></a>
-                </li>
-                <li>
-                    <a class="menu-item" href="/">Home</a>
-                </li>
-                <li>
-                    <a class="menu-item" href="about.html">About</a>
-                </li>
-                <li class="active">
-                    <a class="menu-item" href="services.html">Services</a>
-                </li>
-                <li>
-                    <a class="menu-item" href="portfolio.html">Portfolio</a>
-                </li>
-                <li>
-                    <a class="menu-item" href="shop.html">Shop</a>
-                </li>
-                <li>
-                    <a class="menu-item" href="blog.html">Blog</a>
-                </li>
-                <li>
-                    <a class="menu-item" href="contact.html">Contact</a>
-                </li>
-                <li class="menu-footer">
-                    <span>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                    </span>
-                    <p>© 2016 Phorto Theme<p>
-                </li>
-            </ul>
-        </div>
+        @Html.Partial("_navbar.cshtml", new NavbarViewModel())
         <!-- / side navigation -->
+        <!-- content -->
         @RenderBody()
-    </div>
+        <!-- / content -->
+    </div><!-- / wrapper -->
     <!-- javascript -->
     <script src="~/vendors/Phorto-1.2/js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
