WIP: Setup data access layer
Refactor to use factory for dynamic data

--- a/src/SolThoth.PublicProfile.Website/Views/Shared/_navbar.cshtml
+++ b/src/SolThoth.PublicProfile.Website/Views/Shared/_navbar.cshtml
@@ -28,7 +28,7 @@
         </li>
         <li class="menu-footer">
             <span>
-                @foreach(var link in Model.SocialMediaLinks)
+                @foreach(var link in Model.SocialMediaLinks.Where(s => s.Active))
                 {
                 <a href="@link.Url"><i class="fa @link.CssIcon"></i></a>
                 }
