Setup dependency injection for navbar view

--- a/src/SolThoth.PublicProfile.Website/Views/Shared/_Layout.cshtml
+++ b/src/SolThoth.PublicProfile.Website/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 <body>
     <div id="wrapper">
         <!-- side navigation -->
-        @Html.Partial("_navbar.cshtml", new NavbarViewModel())
+        @Html.Partial("_navbar.cshtml")
         <!-- / side navigation -->
         <!-- content -->
         @RenderBody()
